<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/svCrewMember">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/text"/>

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="341dp"
            android:layout_height="477dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/photo"
            android:src="@color/text_accent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="gender"
                android:textSize="20sp"
                android:textColor="@color/text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/born"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="birthDate"
                android:textSize="20sp"
                android:textColor="@color/text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDeathDate"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/died"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDeathDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="deathDate"
                android:textSize="20sp"
                android:textColor="@color/text" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/bio"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:text="bio"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:maxLines="5" />

        <TextView
            android:id="@+id/tvExpandable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text=". . ."
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:maxLines="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/films"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/llCrewMemberFilmList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"/>

        <ProgressBar
            android:id="@+id/pbFilmLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</ScrollView>